# glucose-meson

./: meson.build
